@@ -166,6 +166,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17818: aifc.getparams now returns a namedtuple.
+
 - Issue #18549: Eliminate dead code in socket_ntohl()
 
 - Issue #18530: Remove additional stat call from posixpath.ismount.
